gitignore: add vim files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 #Side effects from Module packaging.
 pkg/
+
+# swap
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
+# auto-generated tag files
+tags
