--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ notifications:
     email: false
 script: bundle exec rake test
 env:
-  - PUPPET_GEM_VERSION="3.8.7"
+  - PUPPET_GEM_VERSION="3.8.7" RSPEC_GEM_VERSION="3.1.0"
   - PUPPET_GEM_VERSION="4.0"
   - PUPPET_GEM_VERSION="4.1"
 matrix:
