--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,14 @@ notifications:
     email: false
 script: bundle exec rake test
 env:
-  - PUPPET_GEM_VERSION="3.8.7" RSPEC_GEM_VERSION="3.1.0"
+  - PUPPET_GEM_VERSION="3.8.7"
   - PUPPET_GEM_VERSION="4.0"
   - PUPPET_GEM_VERSION="4.1"
 matrix:
-    exclude:
-        - rvm: 2.2
-          env: PUPPET_GEM_VERSION="3.8.7"
+  exclude:
+    - rvm: 2.2
+      env: PUPPET_GEM_VERSION="3.8.7"
+  include:
+    - rvm: 1.8.7
+      env: RSPEC_GEM_VERSION="3.1.0"
 
