--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,9 @@ env:
   - PUPPET_GEM_VERSION="4.1"
 matrix:
   exclude:
+    - rvm: 1.8.7
+      env: PUPPET_GEM_VERSION="4.0"
+    - rvm: 1.8.7
+      env: PUPPET_GEM_VERSION="4.1"
     - rvm: 2.2
       env: PUPPET_GEM_VERSION="3.8.7"
