Move osfacts to a static file
The OS facts will be used all over the place and rather then implement
them each time I'm going to pull them from a static file.

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,5 +2,6 @@ fixtures:
   forge_modules:
     stdlib: 'puppetlabs-stdlib'
     concat: 'puppetlabs-concat'
+    apt: 'puppetlabs-apt'
   symlinks:
     gitlab_ci_multi_runner: "#{source_dir}"
