--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,12 @@ Session.vim
 *~
 # auto-generated tag files
 tags
+
+# gem lock file
+Gemfile.lock
+
+# bundle
+.bundle/*
+
+# fixtures
+spec/fixtures/*
