--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script: bundle exec rake test
 env:
   - PUPPET_GEM_VERSION="3.8.7"
   - PUPPET_GEM_VERSION="4.0"
-  - PUPPET_GEM_VERSION="4.1"
+  - PUPPET_GEM_VERSION="4.1" COVERAGE=true
 matrix:
   exclude:
     - rvm: 1.8.7
