--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,6 @@ matrix:
     - rvm: 1.8.7
       env: PUPPET_GEM_VERSION="4.0"
     - rvm: 1.8.7
-      env: PUPPET_GEM_VERSION="4.1"
+      env: PUPPET_GEM_VERSION="4.1" COVERAGE=true
     - rvm: 2.2
       env: PUPPET_GEM_VERSION="3.8.7"
